correct Boostrap css; left align text #11

--- a/assets/css/infographiq.css
+++ b/assets/css/infographiq.css
@@ -1,3 +1,7 @@
 .tooltip {
-		position: absolute;
+	position: absolute;
+}
+
+.iq_list {
+  text-align: left;
 }
